fix: image was overflowing

--- a/src/app/_components/pokeInfoDisplayer/pokeInfoDisplayer.css
+++ b/src/app/_components/pokeInfoDisplayer/pokeInfoDisplayer.css
@@ -11,6 +11,12 @@
     p {
         margin: 0;
     }
+
+    img {
+        object-fit: contain;
+        max-height: 100%;
+        max-width: 100%;
+    }
 }
 
 .banana {
